// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaPageBlocks AudioPlayer should render correctly for amp 1`] = `
.c0 {
  height: 165px;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

@media (min-width:63rem) {
  .c0 {
    margin-bottom: 2rem;
  }
}

<html>
  <head>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
  </head>
  <body>
    <div>
      <div
        class=""
      >
        <div
          class="c0"
        >
          <amp-iframe
            allowfullscreen="allowfullscreen"
            frameborder="0"
            layout="fill"
            sandbox="allow-scripts allow-same-origin"
            scrolling="no"
            src="https://polling.test.bbc.co.uk/ws/av-embeds/media/afaanoromoo/bbc_afaanoromoo_radio/id/om/amp?morph_env=live"
            title="오디오 플레이어"
          >
            <amp-img
              alt=""
              attribution=""
              height="16"
              layout="fill"
              placeholder="true"
              src="http://localhost:7080/images/amp_audio_placeholder.png"
              width="9"
            />
            <noscript />
          </amp-iframe>
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`MediaPageBlocks AudioPlayer should render correctly for canonical 1`] = `
.c0 {
  height: 165px;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

.c1 {
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

@media (min-width:63rem) {
  .c0 {
    margin-bottom: 2rem;
  }
}

<div
  class=""
>
  <div
    class="c0"
  >
    <iframe
      allow="autoplay; fullscreen"
      allowfullscreen=""
      class="c1"
      scrolling="no"
      src="https://polling.test.bbc.co.uk/ws/av-embeds/media/afaanoromoo/bbc_afaanoromoo_radio/id/om/amp?morph_env=live"
      title="오디오 플레이어"
    />
    <noscript />
  </div>
</div>
`;

exports[`MediaPageBlocks AudioPlayer when externalId is bbc_oromo_radio it is overriden to bbc_afaanoromoo_radio should render correctly for amp 1`] = `
<html>
  <head>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
  </head>
  <body>
    .c0 {
  height: 165px;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

@media (min-width:63rem) {
  .c0 {
    margin-bottom: 2rem;
  }
}

<div>
      <div
        class=""
      >
        <div
          class="c0"
        >
          <amp-iframe
            allowfullscreen="allowfullscreen"
            frameborder="0"
            layout="fill"
            sandbox="allow-scripts allow-same-origin"
            scrolling="no"
            src="https://polling.test.bbc.co.uk/ws/av-embeds/media/afaanoromoo/bbc_afaanoromoo_radio/id/om/amp?morph_env=live"
            title="Audio player"
          >
            <amp-img
              alt=""
              attribution=""
              height="16"
              layout="fill"
              placeholder="true"
              src="http://localhost:7080/images/amp_audio_placeholder.png"
              width="9"
            />
            <noscript />
          </amp-iframe>
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`MediaPageBlocks AudioPlayer when externalId is bbc_oromo_radio it is overriden to bbc_afaanoromoo_radio should render correctly for canonical 1`] = `
.c0 {
  height: 165px;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

.c1 {
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

@media (min-width:63rem) {
  .c0 {
    margin-bottom: 2rem;
  }
}

<div
  class=""
>
  <div
    class="c0"
  >
    <iframe
      allow="autoplay; fullscreen"
      allowfullscreen=""
      class="c1"
      scrolling="no"
      src="https://polling.test.bbc.co.uk/ws/av-embeds/media/afaanoromoo/bbc_afaanoromoo_radio/id/om/amp?morph_env=live"
      title="Audio player"
    />
    <noscript />
  </div>
</div>
`;
